Demo Java版降级到JDK8兼容：HttpURLConnection替代HttpClient、编译启动流程、文档同步